# lemvi-risk-management

./: .gitignore  README.md  main.tf  nohup.out  outputs.tf  pyproject.toml  sample.ipynb  variables.tf
.devcontainer/: Dockerfile  devcontainer.json  docker-entrypoint.sh
scripts/: app.py
src/: ibrokers.py
terraform/: variables.tf
terraform/google-functions/: main.tf  outputs.tf  variables.tf
