[tool.poetry]
name = "lemvi-risk-management-platform"
version = "0.1.0"
description = "Resources for Risk Monitoring"
authors = ["Christophe <christophe.alexandre@lemvi.ch>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.1.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
