[tool.poetry]
name = "lemvi-rm"
version = "0.1.0"
description = "Resources for Risk Monitoring"
authors = ["Christophe <christophe.alexandre@lemvi.ch>"]
readme = "README.md"

packages = [
    { include = "ibrokers.py", from="src" },
    { include = "scripts" }
]
include = [
    { path = "tests", format = "sdist" },
    { path = "scripts/*.py" },
    "README.md",
    "LICENSE"
]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.1.4"
ipykernel = "^6.28.0"
requests = "^2.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
ibrokers-report = "scripts.app:main"
